syntax = "proto3";

option csharp_namespace = "GrpcTicTacToeServer";

package ticTacToe;

// The greeting service definition.
service TicTacToe {
  // Sends a greeting
  rpc SetPlayerCharacter (SetPlayerRequest) returns (SetPlayerReply);
  rpc PlayerTurn (PlayerTurnRequest) returns (PlayerTurnReply);
  rpc ServerTurn (ServerTurnRequest) returns (ServerTurnReply);
  rpc GetBoard (BoardRequest) returns (BoardReply);
  rpc GetResult (ResultRequest) returns (ResultReply);
}

message SetPlayerRequest {
    string requestedPlayerPiece = 1;
}

message SetPlayerReply {
    bool inputWasAccepted = 1;
    string playerCharacter_c = 2;
    string message = 3;
}

message PlayerTurnRequest{
    string playerId = 1;
    int32 row = 2;
    int32 column = 3;
}

message PlayerTurnReply {
    bool inputWasAccepted = 1;
    string turnResult_c = 2;
    string message = 3;
}

message ServerTurnRequest{
    string playerId = 1;
    string playerTurn_c = 2;
}

message ServerTurnReply{
    string turnResult_c = 1;
    string message = 2;
}

message BoardRequest{
    string playerId = 1;
}

message BoardReply{
    string gameBoard = 1;
}

message ResultRequest{
    string playerId = 1;
}

message ResultReply{
    string result_c = 1;
    string playerTurn_c = 2;
    string currentTurn_c = 3;
}